[package]
name = "gfx_window_shared"
version = "0.3.0"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]

[dependencies]
gfx = "0.7.1"
gfx_device_gl = "0.5"
pistoncore-window = "0.10.0"

[dev-dependencies]
glutin = "*"
pistoncore-glutin_window = "0.13.0"
pistoncore-input = "*"
shader_version = "*"
